[gd_scene load_steps=14 format=3 uid="uid://boh0pogtxxw5y"]

[ext_resource type="Shader" path="res://Pawn/Opaque.gdshader" id="1_3hq6s"]
[ext_resource type="Script" path="res://Pawn/Enemy/EnemyBase.gd" id="1_c31fr"]
[ext_resource type="Texture2D" uid="uid://l3fydptoqk0b" path="res://Tank/enemy.bmp" id="2_7eyln"]
[ext_resource type="Texture2D" uid="uid://j15bajstf617" path="res://Tank/sprite.bmp" id="4_135lh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_715hl"]
shader = ExtResource("1_3hq6s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y23ru"]
shader = ExtResource("1_3hq6s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ojjt"]

[sub_resource type="Animation" id="Animation_m3767"]
resource_name = "Enemy_Walk_Up"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_nfrlv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xioch"]
_data = {
"Enemy_Walk_Up": SubResource("Animation_m3767"),
"RESET": SubResource("Animation_nfrlv")
}

[sub_resource type="Animation" id="Animation_20boi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SpawnSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s4w2h"]
resource_name = "SpawnEnemy"
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SpawnSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gn24"]
_data = {
"RESET": SubResource("Animation_20boi"),
"SpawnEnemy": SubResource("Animation_s4w2h")
}

[node name="EnemyBase" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_c31fr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_715hl")
texture = ExtResource("2_7eyln")
hframes = 2
region_enabled = true
region_rect = Rect2(0, 112, 56, 28)

[node name="SpawnSprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_y23ru")
texture = ExtResource("4_135lh")
hframes = 6
region_enabled = true
region_rect = Rect2(256, 32, 192, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7ojjt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xioch")
}

[node name="SpawnAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_0gn24")
}

[connection signal="animation_finished" from="SpawnAnimation" to="." method="_on_spawn_animation_animation_finished"]
